# django_image_proxy

./: .gitignore  README.rst  requirements.txt  setup.cfg
image_proxy/: processors.py  urls.py  views.py
image_proxy/templates/image_proxy/: _image_preview.html  image_preview.html
image_proxy/templatetags/: proxy_thumbnail.py  thumbnail.py
