[metadata]
name = django_image_proxy
summary = Simple Django Image Proxy especially for Horizon Openstack Dashboard.
description-file =
    README.rst
author = Michael Kuty
version = 0.0.2
author-email = mail@majklk.cz
home-page = https://github.com/michaelkuty/django_image_proxy
classifier =
    Development Status :: 3 - Alpha
    Topic :: System :: Software Distribution
    Intended Audience :: Education
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Operating System :: OS Independent

[files]
packages =
    image_proxy